[package]
name = "shooting_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_hanabi = { version = "0.5", default-features = false, features = [ "2d" ] }
leafwing-input-manager = "0.8.0"
bevy-inspector-egui = "0.17.0"
bevy-inspector-egui-rapier = { version = "0.9.0", features = [ "rapier2d" ] }
bevy_rapier2d = { version = "0.20.0", features = ["simd-stable" ] }
